# test-Stakewolle

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cobertura.xml  config.py  deploy.sh  docker-compose.yml  pyproject.toml  swagger_docs.py
.github/workflows/: django.yml
testapi/: models.py  serializers.py  settings.py  tests.py  urls.py  views.py
testapi/migrations/: 0001_initial.py  0002_referral.py
